--- a/index.html
+++ b/index.html
@@ -551,9 +551,9 @@
       }
     }
 
-    #logo_img {
+    /* #logo_img {
       height: 40px;
-    }
+    } */
 
     .title {
       position: relative;
@@ -2588,7 +2588,7 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
 
-        <img id=logo_img src="img/case2022072609323032101302.svg">
+        <!-- <img id=logo_img src="img/case2022072609323032101302.svg"> -->
 
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="javascript:;" anchor="an2022072610152519">首頁</a> </div>
