--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
       background-color: #000;
       line-height: calc((6vw / 65)*100);
       border-radius: calc((50vw / 175)*100);
+      display: flex;
+      justify-content: center;
       /* width: 85px; */
       width: 14vw;
     }
