--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
     .face a{
       display: flex;
       justify-content: center;
+      align-items: center;
+      align-content: center;
+      width: 30%;
     }
     .face img{
-      width: 40%;
+      width: 100%;
     }
 
     @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
@@ -234,10 +237,12 @@
       background-color: #000;
       line-height: calc((6vw / 65)*100);
       border-radius: calc((50vw / 175)*100);
+      border-radius: 50%;
       display: flex;
       justify-content: center;
       /* width: 85px; */
-      width: 14vw;
+      width: 8vw;
+      height: 8vw;
     }
 
     .contact_us_div {
