--- a/index.html
+++ b/index.html
@@ -3236,7 +3236,7 @@ ace
         }, 1000);
       });
 
-
+      
       //-- navbar --  
       if ($(window).width() > 768) {
         let navbar_html =
@@ -3246,7 +3246,10 @@ ace
       } else {
         let navbar_html = `
                 <div class="tool_div flex_box">
-                <div><a class="msg_btn" href="javascript:;" >立即預約</a></div>
+                <div>
+                  <a class="msg_btn" href="javascript:;" ><img src="img/svg/new-phone.gif"></a>
+                  <a class="msg_btn" href="javascript:;" >立即預約</a>
+                </div>
                 <div class="face"><a href="https://www.facebook.com/profile.php?id=100083310423930" target="_blank" ><img src="img/svg/new_fb.png"></a></div>
                 </div>`;
         $('#top_navbar').html(navbar_html);
