--- a/index.html
+++ b/index.html
@@ -3246,7 +3246,7 @@ ace
       } else {
         let navbar_html = `
                 <div class="tool_div flex_box">
-                <div>
+                <div class="cell">
                   <a class="msg_btn" href="javascript:;" ><img src="img/svg/new-phone.gif"></a>
                   <a class="msg_btn" href="javascript:;" >立即預約</a>
                 </div>
