--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
     .face img{
       width: 100%;
     }
+    .cell a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+    }
+    .cell a:nth-child(1){
+      width: 17%;
+    }
+    .cell img{
+      width: 100%;
+    }
 
     @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap");
     @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@500;600;700;900&display=swap");
@@ -225,7 +237,8 @@
       padding: 9px 12px;
       margin-right: 10px;
       line-height: 1;
-
+      display: flex;
+      justify-content: space-around;
     }
 
     #top_navbar .tool_div div:nth-child(1) a {
