--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       margin-right: 10px;
       line-height: 1;
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
     }
 
     #top_navbar .tool_div div:nth-child(1) a {
