--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
       align-content: center;
     }
     .cell a:nth-child(1){
-      width: 17%;
+      width: 20%;
+      padding-right: 1.5vw;
     }
     .cell img{
       width: 100%;
